--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -680,7 +680,7 @@ example scales as well.
 \section*{Acknowledgements}
 
 We would like to thank the Texas Advanced Computing Center (TACC) for access to
-the Stampede supercomputer under allocation TG-DPP130002.
+the Stampede supercomputer under allocation TG-DPP130002 granted by the NSF.
 The authors acknowledge valuable discussion with Randy LeVeque, Marsha
 Berger, and Hans-Petter Langtangen.  We also acknowledge David
 Ketcheson and the KAUST sponsored HPC$^3$ numerics workshop at which
