--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -656,7 +656,7 @@ objective of minimizing the parallel neighbor exchanges.
 \end{figure}
 To demonstrate a multiblock connectivity, we include results for Example 2 in
 \Fig{spherical}, together with a strong scaling table that shows that the spherical
-example scales as well.
+example scales reasonably well too.
 
 
 
