--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -581,6 +581,20 @@ the time integration itself, and mostly linear for the local and parallel
 neighbor exchanges which require about 10\% of the time integration run time;
 see \Fig{uniscale}.
 
+\begin{figure}
+\begin{center}
+  \includegraphics[angle=-90,width=.8\columnwidth]{../figs_misc/omp.eps}
+  \\[1ex]
+  \includegraphics[angle=-90,width=.8\columnwidth]{../figs)misc/advance_strong_omp.eps}
+\end{center}
+\caption{Strong scaling of OpenMP parallelism for advection on a
+  uniformly refined mesh.  Top: run time of advection Riemann problem kernel in both an optimized inlined interface and a generic function pointer interface via \manyclaw.  Bottom: MPI + OpenMp scaling results of advance kernel as above.
+}
+\label{fig:ompscale}
+\end{figure}%
+
+In \Fig{ompscale}, we scale intranode parallel calculations and in future iterations on accerelrators the \manyclaw set of solvers were compuled with \forestclaw.  \manyclaw provides a generic set of interators for Riemann problems and related algorithms. In this work we show good scaling results across a single node and coupled to the MPI scaling as well.
+
 We have examined weak scalability as well by using four times as many processes
 for each level increase, from level 6 at 64 cores to level 11 at 16,384.  Up to
 4,096 cores, the exchange times stay consistently below 16\% of the time
@@ -680,7 +694,7 @@ example scales as well.
 \section*{Acknowledgements}
 
 We would like to thank the Texas Advanced Computing Center (TACC) for access to
-the Stampede supercomputer under allocation TG-DPP130002 granted by the NSF.
+the Stampede supercomputer under allocation TG-DPP130002 and TG-ASC130001 granted by the NSF XSEDE Program. 
 The authors acknowledge valuable discussion with Randy LeVeque, Marsha
 Berger, and Hans-Petter Langtangen.  We also acknowledge David
 Ketcheson and the KAUST sponsored HPC$^3$ numerics workshop at which
@@ -689,7 +703,8 @@ author would like to also acknowledge the Isaac Newton Institute
 (Cambridge, UK), where much of the preliminary development work for
 \forestclaw was done. The leaf/patch paradigm was independently
 presented by B.\ as part of a talk at the SCI Institute, Salt Lake City, Utah,
-USA in July 2011.
+USA in July 2011. The fourth authors recognize Simula National Lab for funding.
+
 
 
 %%%%%%%%%%% The bibliography starts:
