--- a/docs/parco13/paper.tex
+++ b/docs/parco13/paper.tex
@@ -673,7 +673,9 @@ To demonstrate a multiblock connectivity, we include results for Example 2 in
 example scales reasonably well too.
 
 
+\section{Conclusion}
 
+In this work, we have shown a novel new hybrid paradigm for AMR that achieves good scaling both in distributed and shared memory aspects of current machines.  By using each leaf in the AMR hierarchy, we are able to use many different low level solvers and manage the exchanges between them efficiently.  The flexibility and scalability of this approach provides an ideal workspace to explore further algorithms and physics problems requiring new solvers at high resolutions.
 
 
 
