--- a/docs/parco13/conc.tex
+++ b/docs/parco13/conc.tex
@@ -10,4 +10,5 @@ on the other.  All topological operations on the mesh are handled by \pforest,
 while all numerical operations are handled by the \clawpack implementation.
 This combination naturally enables a hybrid MPI/threaded parallelization.
 We demonstrate scalability of this approach in various ways, where the MPI-only variant
-scales up to 16,384 codes
+scales weakly up to 16,384 codes, and strong scalability is linear for up to 256 cores
+in the MPI-only and 128 in the threaded implementation
