Added reference to AMROC code (Ralf Deiterding, DLR, Gottingen)

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -383,6 +383,12 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
   \url{http://seesar.lbl.gov/anag/chombo}}"
 }
 
+@Misc{amroc,
+key = "amroc",
+howpublished = "{AMROC website: \url{http://www.cacr.caltech.edu/asc/wiki/bin/view/Amroc/WebHome}}"
+}
+
+
 @ARTICLE{geoclaw,
   author = {Marsha J. Berger and David L. George and Randall J. LeVeque and Kyle
 	T. Mandli},
