Added reference to BoxLib (LBL, California)

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -366,6 +366,10 @@ incompressible {N}avier-{S}tokes equations in three dimensions",
    \url{http://www.physics.drexel.edu/~olson/paramesh-doc/Users_manual/amr.html}}"
 }
 
+@misc{boxlib,
+ key = "boxlib",
+ howpublished = "{BoxLib website : \url{https://ccse.lbl.gov/BoxLib/index.html}}"
+}
 
 @misc{chombo,
   key = "chombo",
