Added Ash3d reference

--- a/docs/biblio/amr.bib
+++ b/docs/biblio/amr.bib
@@ -393,6 +393,16 @@ howpublished = "{AMROC website: \url{http://www.cacr.caltech.edu/asc/wiki/bin/vi
 }
 
 
+@TechReport{ash3d,
+  author = {Mastin, Larry G. and  Randall, Michael J. and Schwaiger, Hans F. and  Denlinger, Roger P.},
+title = {User's Guide and Reference to Ash3d : A Three-Dimensional Model for Eulerian Atmospheric Tephra Transport and Deposition},
+  institution =  "United States Geological Survey",
+  year = 	 2013,
+  number = 	 "2013-1122",
+  annote = 	 {\url{http://pubs.er.usgs.gov/publication/ofr20131122}}
+}
+
+
 @ARTICLE{geoclaw,
   author = {Marsha J. Berger and David L. George and Randall J. LeVeque and Kyle
 	T. Mandli},
